<resources>
    <string name="currency_RMB" translatable="false">¥</string>
    <string name="tag_recycler_item" translatable="false">TagRecyclerItem</string>
    <string name="simplifiedChinese" translatable="false">简体中文</string>
    <string name="english" translatable="false">English</string>
    <string name="indicator" translatable="false">/%d</string>
    <string name="quoteHeaderNum" translatable="false">(%d)</string>
    <string name="priceRMB" translatable="false">¥ %s</string>
    <string name="version" translatable="false">Version %s</string>
    <string name="rightsReserved" translatable="false">校园空投 版权所有\nCopyright © 2021 SchoolAirdrop. All Rights Reserved.</string>
    <string name="alipayID" translatable="false">%s</string>
    <string name="userProtocol" translatable="false">《用户许可协议》</string>
    <string name="serviceProtocol" translatable="false">《校园空投用户协议与免责条款》</string>
    <string name="privacyProtocol" translatable="false">《校园空投隐私政策》</string>
    <string name="fraction0" translatable="false">.00</string>
    <string name="omit" translatable="false">%s…</string>
    <string name="iwant_tag" translatable="false">#%s</string>
    <string name="app_version_detail" translatable="false">Beta 1.1.5.85</string>
    <string name="app_version" translatable="false">Beta 1.1.5</string>
    <string name="itemNS">"[img src=ic_negotiable/] [img src=ic_secondhand/] %s"</string>
    <string name="itemNSs">"[img src=ic_negotiable_small/] [img src=ic_secondhand_small/] %s"</string>
    <string name="itemN">"[img src=ic_negotiable/] %s"</string>
    <string name="itemNs">"[img src=ic_negotiable_small/] %s"</string>
    <string name="itemS">"[img src=ic_secondhand/] %s"</string>
    <string name="itemSs">"[img src=ic_secondhand_small/] %s"</string>
    <string name="unprocessedSub">未处理(%d)</string>
    <string name="processedSub">已处理(%d)</string>
    <string name="orderID">订单编号 : %s</string>
    <string name="orderCreation">创建时间 : %1$d-%2$d-%3$d</string>
    <string name="orderExpiration">失效时间 : %1$d-%2$d-%3$d</string>
    <string name="alipayAccount">支付宝账号 : %s</string>
    <string name="statistics">统计(%d)</string>
    <string name="userJoinTime">#%1$d年%2$d月%3$d日加入</string>
    <string name="time">%1$d年%2$d月%3$d日</string>
    <string name="loggedIn">已登录 %s</string>
    <string name="remainingTime">%1$d:%2$d:%3$d</string>
    <string name="textRemainCount">剩余%d字可输入</string>
    <string name="toBeAgreedPosition">与%s待约定地点的物品</string>
    <string name="noItemToAgree">没有与%s待约定地点的物品</string>
    <string name="countDown" translatable="false">%1$d:%2$d:%3$d</string>
    <string name="sharedElementPostActivityWrapper" translatable="false">IWantActivitySharedWrapper</string>
    <string name="sharedElementPostActivityAvatar" translatable="false">IWantActivitySharedAvatar</string>
    <string name="sharedElementPostActivityName" translatable="false">IWantActivitySharedName</string>
    <string name="sharedElementPostActivityTitle" translatable="false">IWantActivitySharedContent</string>
    <string name="home">首页</string>
    <string name="my">我的</string>
    <string name="app_name">校园空投</string>
    <string name="goodsDescription">物品描述</string>
    <string name="search">搜索</string>
    <string name="messages">消息</string>
    <string name="mails">邮件</string>
    <string name="selling">在售</string>
    <string name="sold">已售</string>
    <string name="purchased">已购</string>
    <string name="setting">设置</string>
    <string name="personalInfo">个人信息</string>
    <string name="avatar">头像</string>
    <string name="second_hand">二手</string>
    <string name="advertisement">广告</string>
    <string name="negotiable">可议价</string>
    <string name="likes">收藏</string>
    <string name="onGoing">正在进行</string>
    <string name="account">账号管理</string>
    <string name="alipayAccountText">支付宝账号</string>
    <string name="notification">消息通知</string>
    <string name="privacy">隐私</string>
    <string name="general">通用</string>
    <string name="about">关于</string>
    <string name="receiveNewMessages">接收新消息</string>
    <string name="vibrate">振动</string>
    <string name="sounds">声音</string>
    <string name="displayInAppFloat">显示App内浮窗提示</string>
    <string name="language">语言</string>
    <string name="storage">存储空间</string>
    <string name="allowAddViaAlipay">允许通过支付宝添加我</string>
    <string name="allowAddViaAlipayDescription">关闭后不会向你的支付宝好友展示你,同时其他人也无法通过搜索支付宝账号来找到你</string>
    <string name="recommendAlipay">向我推荐支付宝好友</string>
    <string name="recommedAlipauFriendDescription">开启后会向你推荐已加入校园空投的支付宝好友</string>
    <string name="blacklist">黑名单</string>
    <string name="userInfo">用户信息</string>
    <string name="setAvatar">设置头像</string>
    <string name="setName">设置名字</string>
    <string name="more">更多</string>
    <string name="name">名字</string>
    <string name="sex">性别</string>
    <string name="done">完成</string>
    <string name="switchAccount">切换账号</string>
    <string name="signOut">退出登录</string>
    <string name="address">地址</string>
    <string name="addressDescription">地址仅自己可见,可以在需要使用地址时选择</string>
    <string name="takePhoto">拍照</string>
    <string name="selectFromAlbum">从相册选择</string>
    <string name="saveToAlbum">保存至相册</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="female">雌</string>
    <string name="male">雄</string>
    <string name="hermaphrodite">雌雄同体</string>
    <string name="clear">清空</string>
    <string name="nearby">附近</string>
    <string name="noMoreData">没有更多了</string>
    <string name="noMoreOlderData">没有更早的消息了</string>
    <string name="searchHistory">历史搜索</string>
    <string name="deleteAll">全部清除</string>
    <string name="striker">表情</string>
    <string name="send">发送</string>
    <string name="quote">报价</string>
    <string name="quoteDetail">报价详情</string>
    <string name="received">我收到的</string>
    <string name="sent">我发出的</string>
    <string name="agree">同意</string>
    <string name="loginTip">使用支付宝登陆将获取你的账号信息,查看服务条款以了解更多</string>
    <string name="loginWithAlipay">支付宝登录</string>
    <string name="pending">待处理</string>
    <string name="expired">已过期</string>
    <string name="accepted">已接受</string>
    <string name="rejected">已拒绝</string>
    <string name="unprocessed">未处理</string>
    <string name="processed">已处理</string>
    <string name="whatsNew">更新介绍</string>
    <string name="feedback">意见反馈</string>
    <string name="manage">管理</string>
    <string name="filter">筛选</string>
    <string name="filterTimeAsc">按时间正序</string>
    <string name="filterTimeDesc">按时间倒序</string>
    <string name="filterWatches">按热度排序</string>
    <string name="sortBy">物品排序依据</string>
    <string name="add">新增</string>
    <string name="offShelf">下架物品</string>
    <string name="modifyInfo">修改信息</string>
    <string name="addNewSelling">发布物品</string>
    <string name="submit">提交</string>
    <string name="clickable">可点击</string>
    <string name="options">选项</string>
    <string name="detailDescription">详细描述</string>
    <string name="title">标题</string>
    <string name="price">价格</string>
    <string name="purchasing">淘物</string>
    <string name="official">官方</string>
    <string name="all">全部</string>
    <string name="transactions">完成交易次数</string>
    <string name="credits">个人信用</string>
    <string name="transactionsHistory">交易记录</string>
    <string name="creditExcellent">信用极好</string>
    <string name="creditGreat">信用优秀</string>
    <string name="creditGood">信用良好</string>
    <string name="creditFair">信用一般</string>
    <string name="creditLow">信用较低</string>
    <string name="monthlyAssessmentDes">基于你最近一个月的交易情况进行的信用评估</string>
    <string name="reportAssessmentDes">基于用户反馈以及审查验证的信用评估</string>
    <string name="assessResult4">信用优秀 4</string>
    <string name="assessResult3">信用良好 3</string>
    <string name="assessResult2">信用一般 2</string>
    <string name="assessResult1">信用较低 1</string>
    <string name="assessResult5">信用极好 5</string>
    <string name="monthlyAssessment">信用评估</string>
    <string name="reportAssessment">反馈评估</string>
    <string name="assessmentUp">信用较上期上升</string>
    <string name="assessmentDown">信用较上期下降</string>
    <string name="waitingForDelivery">待交付</string>
    <string name="waitingForPay">待付款</string>
    <string name="cover">封面</string>
    <string name="picSet">图片集</string>
    <string name="locating">获取定位中</string>
    <string name="errorNetLocation">网络或定位出错啦</string>
    <string name="errorGoodsEmptyHome">附近还没有人发布过物品，快去发布你自己的物品吧</string>
    <string name="errorIWantEmpty">附近还没有人发布求购，快去发布你自己的求购吧</string>
    <string name="postMyItem">去发布我的物品</string>
    <string name="errorRetry">重试</string>
    <string name="trash">回收站</string>
    <string name="pleaseLogin">请登录</string>
    <string name="selectPosition">选择地点</string>
    <string name="searchPosition">搜索附近的地点</string>
    <string name="relocate">重新定位</string>
    <string name="refuse">拒绝</string>
    <string name="accept">接受</string>
    <string name="permissionTitle">需要权限</string>
    <string name="waitingForBuyerPayment">等待买家付款</string>
    <string name="WaitingForSellerToDeliver">等待卖家交付</string>
    <string name="warningForSeller">如果倒计时结束，卖家未完成交付，将会扣除卖家信用分数。</string>
    <string name="notMatchDescription">实物与描述不符</string>
    <string name="receivingCode">[img src=ic_qr/] 收货码</string>
    <string name="GOSETTING">去设置</string>
    <string name="NEXTTIME">不了</string>
    <string name="obtainLocationInfo">获取定位信息</string>
    <string name="permissionDenied">权限被拒绝</string>
    <string name="errorLocation">定位信息获取失败</string>
    <string name="locationPermissionContent">定位将用于获取淘物附近在售、附近求购以及物品发布位置。若不允许，校园空投核心功能将不可用。</string>
    <string name="cameraPermissionContent">相机将用于即时拍照，在上传头像以及物品发布时可能需要此功能。若不允许，上述功能将不可用。</string>
    <string name="albumPermissionContent">读写存储在接受消息通知、上传头像以及物品发布时可能需要此功能。若不允许，你将无法接受重要通知且部分重要功能不可用。</string>
    <string name="phonePermissionContent">在接受消息通知时需要此功能。若不允许，你将无法接受重要通知。</string>
    <string name="REJECT">拒绝</string>
    <string name="RETRY">重试</string>
    <string name="GRANTPERMISSION">给予权限</string>
    <string name="logged">已登录</string>
    <string name="networkUnavailable">网络连接暂时不可用\n请检查网络连接设置</string>
    <string name="connectionLost">连接中断 请重试</string>
    <string name="submitSuccess">提交成功</string>
    <string name="submitFailed">提交失败</string>
    <string name="submitSuccessTip">建议稍后去首页搜索是否可以看到你的提交，若多次搜索无法找到，可能是上传时定位错误，可稍后修改信息并为其重新定位后提交。</string>
    <string name="modifySuccessTip">修改后的信息可能出现更新不及时，若发现长时间没有更改，请尝试重新提交。</string>
    <string name="submitFailedTip">可能是土豆过于繁忙或者正在维护。表单已自动保存，建议稍后重新提交。</string>
    <string name="modifyFailedTip">可能是土豆过于繁忙或者正在维护。修改的表单不会保存，建议稍后再试。</string>
    <string name="OK">好</string>
    <string name="errorUpdateAvatar">上传头像出错</string>
    <string name="imageSaved">图片已保存至相册</string>
    <string name="errorUpdatingName">名字修改失败</string>
    <string name="InitiateQuote">发起报价</string>
    <string name="goodsIsSecondHand">物品为二手</string>
    <string name="originPrice">原价</string>
    <string name="unLogged">未登录</string>
    <string name="emptySearch">啊哦，什么也没有找到</string>
    <string name="recyclerHeader" translatable="false">recycler_header</string>
    <string name="statistic">统计</string>
    <string name="disagreeAndQuit">拒绝并退出校园空投</string>
    <string name="serviceTip">在开始之前，请仔细阅读我们的服务条款和隐私政策(包含第三方服务)</string>
    <string name="haveReadAndAgreeTerms">我已认真阅读并同意以上服务条款和隐私政策</string>
    <string name="privacyAndService">隐私政策与服务条款</string>
    <string name="pleaseAgreeAboveTermsFirst">请先阅读并同意以上条款</string>
    <string name="selectYourCardColor">选择一种卡片色彩</string>
    <string name="iwantColorDefault">默认 &#160;[img src=bg_round_primary_dark/]</string>
    <string name="iwantColorPurple">紫色 &#160;[img src=bg_round_purple/]</string>
    <string name="iwantColorTheme">主题 &#160;[img src=bg_round_theme/]</string>
    <string name="iwantColorHeart">红色 &#160;[img src=bg_round_heart/]</string>
    <string name="iwantColorWarning">警告 &#160;[img src=bg_round_warning/]</string>
</resources>