<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_purchasing"
        android:icon="@drawable/ic_moneybox"
        android:title="@string/purchasing" />

    <item
        android:id="@+id/navigation_playground"
        android:icon="@drawable/ic_all"
        android:title="@string/inquiry" />

    <item
        android:id="@+id/navigation_hidden"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_messages"
        android:title="@string/messages" />

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/ic_user_line"
        android:title="@string/my" />

</menu>
