<?xml version="1.0" encoding="utf-8"?>
<com.example.schoolairdroprefactoredition.utils.OverDragLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/general_padding_large"
        android:orientation="vertical"
        android:splitMotionEvents="false">

        <com.example.schoolairdroprefactoredition.ui.components.PageItem
            android:id="@+id/settings_privacy_find_via_alipay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:PI_description="@string/allowAddViaAlipayDescription"
            app:PI_isSwitch="true"
            app:layout_constraintTop_toTopOf="parent"
            app:PI_title="@string/allowAddViaAlipay" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginStart="50dp"
            android:background="@color/colorLine"
            app:layout_constraintBottom_toBottomOf="@+id/settings_privacy_find_via_alipay"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.example.schoolairdroprefactoredition.ui.components.PageItem
            android:id="@+id/settings_privacy_recommend_alipay_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:PI_description="@string/recommedAlipauFriendDescription"
            app:PI_isSwitch="true"
            app:layout_constraintTop_toBottomOf="@+id/settings_privacy_find_via_alipay"
            app:PI_title="@string/recommendAlipay" />

        <com.example.schoolairdroprefactoredition.ui.components.PageItem
            android:id="@+id/settings_privacy_blacklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_padding_large"
            app:layout_constraintTop_toBottomOf="@+id/settings_privacy_recommend_alipay_friend"
            app:PI_title="@string/blacklist" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.example.schoolairdroprefactoredition.utils.OverDragLayout>