<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="@dimen/general_padding"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_creation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderCreation"
        app:layout_constraintStart_toStartOf="@id/order_id"
        app:layout_constraintTop_toBottomOf="@id/order_id" />

    <TextView
        android:id="@+id/order_expiration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderExpiration"
        app:layout_constraintStart_toStartOf="@id/order_id"
        app:layout_constraintTop_toBottomOf="@id/order_creation" />

</androidx.constraintlayout.widget.ConstraintLayout>