<?xml version="1.0" encoding="utf-8"?>
<com.example.schoolairdroprefactoredition.ui.auto.ConstraintLayoutAuto xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingStart="@dimen/general_padding_larger"
    android:paddingTop="@dimen/general_padding_bit_larger"
    android:paddingEnd="@dimen/general_padding_larger"
    android:paddingBottom="@dimen/general_padding_bit_larger"
    android:tag="@string/recyclerHeader">

    <TextView
        android:id="@+id/ssb_header_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/general_padding"
        android:gravity="center_vertical"
        android:text="@string/statistic"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableStartCompat="@drawable/ic_statistics" />

    <ImageView
        android:id="@+id/ssb_header_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/filter"
        android:src="@drawable/ic_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</com.example.schoolairdroprefactoredition.ui.auto.ConstraintLayoutAuto>