<?xml version="1.0" encoding="utf-8"?>
<com.example.schoolairdroprefactoredition.ui.auto.ConstraintLayoutAuto xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom">

    <TextView
        android:id="@+id/title"
        style="@style/SheetFirst"
        android:padding="@dimen/general_padding_bit_larger"
        android:text="@string/sortBy"
        android:textColor="@color/primaryDarkest"
        android:textSize="@dimen/textSizeMin"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/s0"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sheet_gap"
        android:background="@color/colorLine"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/female"
        style="@style/SheetNormal"
        android:text="@string/filterTimeAsc"
        app:layout_constraintTop_toBottomOf="@id/s0" />

    <View
        android:id="@+id/s1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sheet_gap"
        android:background="@color/colorLine"
        app:layout_constraintTop_toBottomOf="@+id/female" />

    <TextView
        android:id="@+id/male"
        style="@style/SheetNormal"
        android:text="@string/filterTimeDesc"
        app:layout_constraintTop_toBottomOf="@+id/s1" />

    <View
        android:id="@+id/s2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sheet_gap"
        android:background="@color/colorLine"
        app:layout_constraintTop_toBottomOf="@+id/male" />

    <TextView
        android:id="@+id/hermaphrodite"
        style="@style/SheetNormal"
        android:text="@string/filterWatches"
        app:layout_constraintTop_toBottomOf="@+id/s2" />

    <View
        android:id="@+id/gap"
        android:layout_width="match_parent"
        android:layout_height="@dimen/general_padding_large"
        android:background="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/hermaphrodite" />

    <TextView
        android:id="@+id/cancel"
        style="@style/SheetCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gap"
        app:layout_goneMarginTop="@dimen/general_padding_large" />

</com.example.schoolairdroprefactoredition.ui.auto.ConstraintLayoutAuto>