<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/general_padding"
    app:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/assessment_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_padding_bit_larger"
            android:layout_marginTop="@dimen/general_padding_bit_larger"
            android:text="@string/monthlyAssessment"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/assessment_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_up"
            app:layout_constraintBottom_toBottomOf="@+id/assessment_type"
            app:layout_constraintEnd_toEndOf="@+id/assessment_time"
            app:layout_constraintTop_toTopOf="@+id/assessment_type"
            android:contentDescription="@string/assessmentUp" />

        <TextView
            android:id="@+id/assessment_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_padding_small"
            android:layout_marginEnd="@dimen/general_padding_large"
            android:ellipsize="end"
            android:text="@string/time"
            android:textSize="@dimen/textSizeMin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/assessment_type"
            app:layout_constraintTop_toBottomOf="@+id/assessment_type" />

        <TextView
            android:id="@+id/assessment_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_padding_small"
            android:layout_marginEnd="@dimen/general_padding_large"
            android:ellipsize="end"
            android:text="@string/monthlyAssessmentDes"
            android:textSize="@dimen/textSizeMin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/assessment_type"
            app:layout_constraintTop_toBottomOf="@+id/assessment_time" />

        <TextView
            android:id="@+id/assessment_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_padding_larger"
            android:layout_marginBottom="@dimen/general_padding_larger"
            android:text="@string/assessResult4"
            android:textColor="@color/colorCreditGood"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/assessment_type"
            app:layout_constraintTop_toBottomOf="@+id/assessment_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>